# yazio-cli

./: README.md  install.sh  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/yazio_cli/: api.py  cli.py
tests/: test_api.py
