[project]
name = "yazio-cli"
version = "0.1.0"
description = "CLI for Yazio calorie tracking"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "rich>=14.3.3",
    "typer>=0.24.1",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/yazio_cli"]

[project.scripts]
yazio = "yazio_cli.cli:app"
