[project]
name = "yazio-cli"
version = "0.1.1"
description = "CLI for Yazio calorie tracking"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "rich>=14.3.3",
    "typer>=0.24.1",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.20.0",
    "pyinstaller>=6.19.0",
    "pytest>=9.0.3",
    "ruff>=0.15.10",
]

[tool.hatch.build.targets.wheel]
packages = ["src/yazio_cli"]

[project.scripts]
yazio = "yazio_cli.cli:app"

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["httpx.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
